# deep-learning-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
convolutional-neural-networks/cifar-cnn/: cifar10_cnn_exercise.ipynb  model_cifar.pt
convolutional-neural-networks/conv-visualization/: conv_visualization.ipynb  custom_filters.ipynb  maxpooling_visualization.ipynb
convolutional-neural-networks/mnist-mlp/: mnist_mlp_exercise.ipynb  mnist_mlp_solution_with_validation.ipynb
intro-neural-networks/: exercise-1.ipynb  exercise-cross-entropy.ipynb  exercise-perceptron.ipynb
intro-neural-networks/gradient-descent/: GradientDescent.ipynb
intro-neural-networks/student-admissions/: StudentAdmissions.ipynb
intro-to-pytorch/: Part 1 - Tensors in PyTorch (Exercises).ipynb  Part 2 - Neural Networks in PyTorch (Exercises).ipynb  Part 3 - Training Neural Networks (Exercises).ipynb  Part 4 - Fashion-MNIST (Exercises).ipynb  Part 5 - Inference and Validation (Exercises).ipynb  Part 6 - Saving and Loading Models.ipynb  Part 7 - Loading Image Data (Exercises).ipynb  Part 8 - Transfer Learning (Exercises).ipynb
recurrent-neural-networks/char-rnn/: Character_Level_RNN_Exercise.ipynb
recurrent-neural-networks/time-series/: Simple_RNN.ipynb
sentiment-rnn/: Sentiment_RNN_Exercise.ipynb
